--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10min=80cs</title>
+    <script src="tes.js"></script>
 </head>
 <body>
-    <h1>GIT TEST HTML</h1>
-    <canvas id="canvas001" width="400px" height="400px"></canvas>
+    <h1>GIT TEST </h1>
+    <canvas id="can"  width="400px" height="400px"></canvas>
 </body>
 </html>
