--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="tes.js"></script>
 </head>
 <body>
-    <h1>GIT TEST </h1>
+    <h1>TSUKUTTEWAKUWAKU</h1>
     <canvas id="can"  width="400px" height="400px"></canvas>
 </body>
 </html>
